--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/c-ares"]
 	path = deps/c-ares
 	url = https://github.com/c-ares/c-ares
+[submodule "deps/--force"]
+	path = deps/--force
+	url = https://github.com/c-ares/c-ares
